css/site.css
/* ... */
#topbar {background: rgba(231,232,233,1);}
#header {background: rgba(0,116,150,1);}
#header h1#logo {padding: 0; text-align: center; font-size: 16.6em; color: rgba(255,255,255,1); line-height: 1.0em; vertical-align: top;}
#header h1#logo a {color: rgba(255,255,255,1);}
/*#header h1#logo a:hover, #header h1#logo a:focus {color: rgba(238,49,45,1);}*/


#content #excuses_list {margin: 0 0 30px 0;}
#content #excuses_list ol {counter-reset: li; list-style: none; margin: 10px 0 0 0; padding: 0;}
#content #excuses_list ol li {margin: 0 0 10px 0; font-size: 6.4em;}
#content #excuses_list ol > li:before {content: counter(li); counter-increment: li; width: 55px; text-align: right; padding: 0 12px 0 0; color: rgba(238,49,45,1);}

#content {counter-reset: ex;}
#content .excuse .num:before {content: counter(ex); counter-increment: ex;}


#content .excuse {padding: 15px 0 10px 0; margin: 20px 0 0 0; border-top: 3px solid rgba(0,116,150,1);}
#content .excuse h3 {padding-top: 15px;}
#content .excuse .video {margin: 10px 0;}
#content .excuse .social_buttons {padding: 10px 0 20px 0;}
#content .excuse .description {padding: 10px 0;}

#content #valid_excuses {padding-top: 30px;}
#content #valid_excuses h2 {font-size: 2.0em; line-height: 1.2em;}
#content #valid_excuses ul {list-style: square; margin: 0 0 0 25px; padding: 5px 0 0 0;}
#content #valid_excuses ul li {font-size: 1.6em; padding: 2px 0 2px 5px; margin: 0;}
#content #valid_excuses ul li p {font-size: 1.0em; padding: 0;}
#content #valid_excuses ul li p a {color: rgba(238,49,45,1);}
#content #valid_excuses ul li p a:hover, #content #valid_excuses ul li p a:focus {color: rgba(0,116,150,1);}

.social_buttons ul {margin: 10px 0 0 0; padding: 0; list-style: none;}
.social_buttons ul li {clear: none; float: left; padding: 0 0 0 20px;}
.social_buttons ul li:first-child {padding: 0;}
.social_buttons ul li a.facebook_share {font-size: 1.1em; display: inline-block; height: 26px; overflow: hidden; border: 1px solid rgba(204,204,204,1); border-radius: 4px; color: rgba(255,255,255,1); font-weight: bold; text-shadow: 0 1px 0 rgba(0,0,0,.23); background-color: rgba(60,90,151,1); background-image: none; background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(80,110,151,1)), to(rgba(50,80,141,1))); background-image: -moz-linear-gradient(center bottom, rgb(80,110,151) 100%, rgb(50,0,141) 0%);}
.social_buttons ul li a.facebook_share:hover, .social_buttons ul li a.facebook_share:focus {background-color: rgba(31,65,137,1); background-color: rgba(31,65,137,1); background-image: none; background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(60,90,151,1)), to(rgba(31,65,137,1))); background-image: -moz-linear-gradient(center bottom, rgb(60,90,151) 100%, rgb(31,65,137) 0%);}
.social_buttons ul li a.facebook_share i.icon {clear: none; float: left; border-right: 1px solid rgba(255,255,255,.18);}
.social_buttons ul li a.facebook_share span {display: inline-block; padding: 5px 8px 0 8px; height: 100%; vertical-align: top; border-left: 1px solid rgba(0,0,0,.08); font-family: 'Helvetica Neue', Arial, sans-serif; letter-spacing: 0;}
.social_buttons ul li.gplus {padding-top: 1px;}

#sidebar .box {padding: 0 0 20px 0;}
#sidebar .box h3 {padding: 0 0 12px 0;}
#sidebar #sidebar_go_vote {padding: 0 0 40px 0;}
#sidebar #sidebar_go_vote h4 {font-size: 6.4em; line-height: .85em;}
#sidebar #sidebar_go_vote a {display: inline-block; padding: 10px 15px; margin: -0; background-color: rgba(231,232,233,1); text-align: center;}
#sidebar #sidebar_go_vote a:hover, #sidebar #sidebar_go_vote a:focus { color: rgba(255,255,255,1);}
/*#sidebar #sidebar_go_vote a, #sidebar #sidebar_go_vote a span {-webkit-transition: color .1s ease-out;}*/
#sidebar #sidebar_go_vote a:hover span, #sidebar #sidebar_go_vote a:focus span {color: rgba(238,49,45,1);}
#sidebar #full_credits {padding: 20px 0 0 0;}
#sidebar #general_share ul li {height: 26px; padding: 0 0 15px 15px; overflow: hidden;}
#sidebar #general_share ul li.twitter, #sidebar #general_share ul li.facebook {clear: both; padding: 0 0 15px 0;}
#sidebar #general_share ul li.facebook_like {padding-top: 5px; height: 21px;}
#sidebar #general_share ul li.twitter {padding-top: 2px; height: 24px;}
#sidebar dl dt {padding: 30px 0 3px 0;}
#sidebar dl *:first-child {padding-top: 0;}
#sidebar dl dd {padding: 5px 0 0 0; font-size: 1.4em;}
#sidebar dl dd a {color: rgba(88,88,90,1);}
#sidebar dl dd a:hover, #sidebar dl dd a:focus {color: rgba(238,49,45,1);}

#footer {background: rgba(88,88,90,1); color: rgba(255,255,255,.64);}
#footer h2, #footer p {color: rgba(255,255,255,.64);}
#footer .credits h2 {font-size: 1.4em;}
#footer .credits p {padding: 5px 0 0 0; line-height: 1.2em;}
#footer .credits p a {vertical-align: middle;}
#footer .credits p a i.icon {opacity: .64;}
#footer .credits p a:hover i.icon {opacity: 1;}
#footer .credits p span {padding: 0 5px; color: rgba(255,255,255,.36); vertical-align: middle;}


/* HiDPI tweaks */
@media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
  i.icon {background-image: url(../images/assets@2x.png?v2); -webkit-background-size: auto 250px; -moz-background-size: auto 250px; background-size: auto 250px;}
}


/* --- Web Structure ---------------------------------------------------------- */

.container {width: 940px; margin: 0 auto;}
#wrapper {}
#topbar {height: 12px; margin: 0 0 25px 0;}
#header {padding: 90px 0 85px 0; margin: 0 0 84px 0;}
#header h1#logo {max-height: 166px;}
#header #logo_stamp {bottom: -133px; left: 0; right: 0; margin: 0 auto; width: 116px; height: 112px;}
#content {width: 640px; min-height: 600px; padding: 0 0 80px 0;}
#sidebar {width: 240px;}
#footer {padding: 30px 0;}
/* ... */

